tests/errors/catchable/catch_generic.zy
// Named tuple field access is a runtime error — caught by generic :!
t = (name: "Alice", age: 30)

!? {
    x = t.salary
    >> x ¶
} :! {
    >> "caught: generic error" ¶
    >> _err ¶
}
>> "continues" ¶
